--- a/HappyPlace/src/HappyPlace/site/templates/splash.html
+++ b/HappyPlace/src/HappyPlace/site/templates/splash.html
@@ -1,14 +1,23 @@
 <html>
 
-	<head>
-		{% load staticfiles %}
-		<link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
-	</head>
+<head>
+	{% load staticfiles %}
+	<link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+	<script src="{{ STATIC_URL}}mobileCheck" type="text/javascript"></script>
+	
+	<script type="text/javascript">
+		$(document).ready(function(){
+			document.getElementById('mobileFlag').value = jQuery.browser.mobile;
+		});
+	</script>
+</head>
 
 <body style="background-image: url(./static/cheers.jpg); background-size: covers;">
 	<img src="{% static 'logo.png' %}" style="display: block; margin: 0 auto;">
 	<p style="text-align: center; color: black;">Find Your Happy Place</p>
-	<form class="selectForm" enctype="multipart/form-data" action="/" method="post" style="text-align: center;">
+	<form id="splashSelect" class="selectForm" enctype="multipart/form-data" action="/" method="post" style="text-align: center;">
 		{% csrf_token %}
 	
 		<div class="selectFormRow">
@@ -23,7 +32,9 @@
 	
 		<div class="selectFormRow" style="padding-top: 20px;">
 		</div>
-	
+		
+		<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
+		
 	</form>
 </body>
 
