--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -11,6 +11,8 @@
    
 <script type="text/javascript">
 	$(document).ready(function(){
+		document.getElementById('mobileFlag').value = jQuery.browser.mobile;
+	
 		$('#submit').attr('disabled', true);
         $("#report tr:odd").addClass("odd");
         $("#report tr:even").addClass("hidden");
@@ -79,6 +81,7 @@
 		<input id="submit" type="submit" value="Submit">
 		<input id="clear" type="submit" value="Clear" onClick="clearFilters()">
 		<p> <input id="currentTimeOnly" name="currentTimeOnly" type ="checkbox" onClick="currentOnlyFilter()"> Right Now! </p>
+		<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
 	</div>
 </form>
 
