--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -8,6 +8,7 @@
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+<script src="{{ STATIC_URL}}mobileCheck" type="text/javascript"></script>
    
 <script type="text/javascript">
 	$(document).ready(function(){
@@ -81,8 +82,9 @@
 		<input id="submit" type="submit" value="Submit">
 		<input id="clear" type="submit" value="Clear" onClick="clearFilters()">
 		<p> <input id="currentTimeOnly" name="currentTimeOnly" type ="checkbox" onClick="currentOnlyFilter()"> Right Now! </p>
-		<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
 	</div>
+	
+	<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
 </form>
 
 
