--- a/HappyPlace/src/HappyPlace/site/templates/home_mobile.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home_mobile.html
@@ -8,11 +8,13 @@
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+<script src="{{ STATIC_URL}}mobileCheck" type="text/javascript"></script>
    
 <script type="text/javascript">
 	$(document).ready(function(){
-		$('#submit').attr('disabled', true);
-    
+		document.getElementById('mobileFlag').value = jQuery.browser.mobile;
+		
+		$('#submit').attr('disabled', true);    
         
         var lastSelectedCity = '{{ lastSelectedCity }}';
         var lastSelectedNeighborhood = '{{ lastSelectedNeighborhood }}';
@@ -72,20 +74,25 @@
 		<input id="clear" type="submit" value="Clear" onClick="clearFilters()">
 		<p> <input id="currentTimeOnly" name="currentTimeOnly" type ="checkbox" onClick="currentOnlyFilter()"> Right Now! </p>
 	</div>
+	
+	<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
 </form>
 
 
 
 <div id = "tableContainer" cellspacing='0' >
- <table id="report">
+{% if mobile %}
+<p>a</p>
+{% endif %}
+ <table id="report" style="width: 94%; margin: 3%; font-size: 32px">
         <tr>
             <th>Name</th>
     		<th>Location</th>
             <th>Today's Specials</th>
         </tr>
         {% for happyPlace in happyPlaces %}
-	        	<tr>
-	            	<td>
+	        	<tr style="height: 150px">
+	            	<td style="font-size: 28px">
 	            		{% if happyPlace.site != None %}
 	            			<a target="_blank" href="{{ happyPlace.site }}">
 								{{ happyPlace.name }}
@@ -94,14 +101,14 @@
 							{{ happyPlace.name }}
 						{% endif %}
 					</td>
-		            <td> 
+		            <td style="font-size: 28px">  
 		            	<a target="_blank" href="https://www.google.com/maps/search/{{happyPlace.name}} {{ happyPlace.address }} {{ happyPlace.city }}/17z">
 		            		{{ happyPlace.address }}
 		            	</a>
 		            	</br>@</br>
 		            	{{ happyPlace.cross }}
 		            </td>
-		            <td>
+		            <td style="font-size: 28px">
 		            	{% for happyHour in happyPlace.happyHours.all %}
 		            		{% if today in happyHour.days %}
 		            			{% with start=happyHour.start|formatTime end=happyHour.end|formatTime %}
