--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -6,15 +6,17 @@
 <link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
 
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 <script src="{{ STATIC_URL}}mobileCheck" type="text/javascript"></script>
-   
+<script src="{{ STATIC_URL}}slideshow.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 	$(document).ready(function(){
 		document.getElementById('mobileFlag').value = jQuery.browser.mobile;
-	
+		
 		$('#submit').attr('disabled', true);
+		
         $("#report tr:odd").addClass("odd");
         $("#report tr:even").addClass("hidden");
         $("#report tr:not(.odd)").hide();
@@ -27,11 +29,26 @@
         
         var lastSelectedCity = '{{ lastSelectedCity }}';
         var lastSelectedNeighborhood = '{{ lastSelectedNeighborhood }}';
+
+			
+       	$.getJSON("/getPhotos/" + lastSelectedCity.replace(' ','_') + "/" + lastSelectedNeighborhood.replace(' ','_'), function(data) {
+       		if (lastSelectedNeighborhood == 'all'){
+       			lastSelectedNeighborhood = '';
+       		}
+       		
+       		var pics = [];
+			for (var x = 1; x <= data; x++) {
+		       	pics[x-1] =	".{{STATIC_URL}}" + lastSelectedCity.replace(' ','_') + "/" + lastSelectedNeighborhood.replace(' ','_') + "/" + x + ".jpg";
+    	    }  
+    	      
+    	    
+        	shuffle(pics);
+        	        	
+        	$.backstretch(pics,{duration:6000, fade:1000});
+        });
         
         $('select#city').val(lastSelectedCity).attr('selected', true);
-        
-        $('#body').css('background-image','url('+'./static/'+ lastSelectedCity.replace(' ','_') +'.jpg'+')');        
-        
+                  
         $("select#city").change(function() {        	
 			//deconstruct spaces for URL
 			var url = "/getNeighborhoods/" + $(this).val().replace(' ','_');
@@ -53,9 +70,18 @@
         $('select#city').trigger('change');
 	});
        	 
+    function flipMobileFlag(){
+		document.getElementById('mobileFlag').value = !(document.getElementById('mobileFlag').value) || {{ desktopOverride }};
+    }
+    
 	function clearFilters(){
 		$("select#city option:first").attr('selected', 'selected');
     }
+            
+    function shuffle(o) {
+		for(var j, x, i = o.length; i; j = parseInt(Math.random() * i), x = o[--i], o[i] = o[j], o[j] = x);
+		return o;
+	};
     
 </script>
 </head>
@@ -74,17 +100,21 @@
 		</select>
 		
 		<select name="neighborhood" id="neighborhood" disabled="true">
-			<option value="defaultNeighborhood">Select a Neighborhood</option>
+			<option value="all">Select a Neighborhood</option>
 		</select>
 	</div>
 	
 	<div class="selectFormRow" style="padding-top: 20px;">
 		<input id="submit" type="submit" value="Submit">
 		<input id="clear" type="submit" value="Clear" onClick="clearFilters()">
+		{% if desktopOverride == "true" %} 
+			<input id="flipView" type="submit" value="Mobile/Desktop" onClick="flipMobileFlag()">
+		{% endif %}
 		<p> <input id="currentTimeOnly" name="currentTimeOnly" type ="checkbox" onClick="currentOnlyFilter()"> Right Now! </p>
 	</div>
-	
+		
 	<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
+	<input type="hidden" id="desktopOverride" name="desktopOverride" value="false"/>
 </form>
 
 
