--- a/HappyPlace/src/HappyPlace/site/templates/home_mobile.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home_mobile.html
@@ -6,10 +6,11 @@
 <link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
 
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 <script src="{{ STATIC_URL}}mobileCheck" type="text/javascript"></script>
-   
+<script src="{{ STATIC_URL}}slideshow.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 	$(document).ready(function(){
 		document.getElementById('mobileFlag').value = jQuery.browser.mobile;
@@ -19,9 +20,24 @@
         var lastSelectedCity = '{{ lastSelectedCity }}';
         var lastSelectedNeighborhood = '{{ lastSelectedNeighborhood }}';
         
-        $('select#city').val(lastSelectedCity).attr('selected', true);
+        $.getJSON("/getPhotos/" + lastSelectedCity.replace(' ','_') + "/" + lastSelectedNeighborhood.replace(' ','_'), function(data) {
+        	lastSelectedCity = lastSelectedCity.replace(' ','_') + "/"
+        	lastSelectedNeighborhood = lastSelectedNeighborhood.replace(' ','_') + "/"
+        	
+       		if (lastSelectedNeighborhood == 'all/') {
+       			lastSelectedNeighborhood = '';
+       		}
+       		
+       		var pics = [];
+			for (var x = 1; x <= data; x++) {
+		       	pics[x-1] =	".{{ STATIC_URL }}" + lastSelectedCity + lastSelectedNeighborhood + x + ".jpg";
+    	    }  
+    	    
+        	pics = pics.sort(function(){return .5 - Math.random()});
+        	$.backstretch(pics,{duration:7200, fade:1000});
+        });
         
-        $('#body').css('background-image','url('+'./static/'+ lastSelectedCity.replace(' ','_') +'.jpg'+')');        
+        $('select#city').val(lastSelectedCity).attr('selected', true);
         
         $("select#city").change(function() {        	
 			//deconstruct spaces for URL
@@ -44,6 +60,12 @@
         $('select#city').trigger('change');
 	});
        	 
+    
+	function flipMobileFlag(){
+		document.getElementById('desktopOverride').value = "true";
+		document.getElementById('mobileFlag').value = !(document.getElementById('mobileFlag').value);
+    }
+    
 	function clearFilters(){
 		$("select#city option:first").attr('selected', 'selected');
     }
@@ -72,23 +94,36 @@
 	<div class="selectFormRow" style="padding-top: 20px;">
 		<input id="submit" type="submit" value="Submit">
 		<input id="clear" type="submit" value="Clear" onClick="clearFilters()">
+		<input id="flipView" type="submit" value="Mobile/Desktop" onClick="flipMobileFlag()">
 		<p> <input id="currentTimeOnly" name="currentTimeOnly" type ="checkbox" onClick="currentOnlyFilter()"> Right Now! </p>
 	</div>
-	
+	<br/>
+	<br/>
 	<input type="hidden" id="mobileFlag" name="mobileFlag" value=""/>
+	<input type="hidden" id="desktopOverride" name="desktopOverride" value="false"/>
 </form>
 
 
 
 <div id = "tableContainer" cellspacing='0' >
-{% if mobile %}
-<p>a</p>
-{% endif %}
  <table id="report" style="width: 94%; margin: 3%; font-size: 32px">
         <tr>
             <th>Name</th>
     		<th>Location</th>
             <th>Today's Specials</th>
+        </tr>
+        <tr style="height: 150px">
+        	<td style="font-size: 28px">
+        		NAME
+        	</td>
+        	<td style="font-size: 28px">
+        		ADDRESS
+        	</td>
+        	<td style="font-size: 28px">
+        		<p style="font-size: 25px; float: left;" >4pm-8pm:</p><img style="font-size: 25px; float: left; padding-top:15px; padding-left:5px;" height="40px" src="{% static '2Beer.png' %}"/>
+        		<p style="font-size: 25px; float: left;" >4pm-8pm:</p><img style="font-size: 25px; float: left; padding-top:15px; padding-left:5px;" height="40px" src="{% static '4Beer.png' %}"/>
+        		<p style="font-size: 25px; float: left;" >4pm-8pm:</p><img style="font-size: 25px; float: left; padding-top:15px; padding-left:5px;" height="40px" src="{% static '5Beer.png' %}"/>
+        	</td>
         </tr>
         {% for happyPlace in happyPlaces %}
 	        	<tr style="height: 150px">
